--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <ol>
-      <li><a href="./recipes/bassomatic">Delicious Bass</a>
-    </ol
+    <ul>
+      <li><a href="./recipes/bassomatic.html">Terrific Bass</a>
+    </ul>
   </body>
 </html>
