Link to oatmeal and smoothie in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/bassomatic.html">Terrific Bass</a>
+      <li><a href="./recipes/oatmeal.html">Breakfast Oatmeal</a>
+      <li><a href="./recipes/smoothie.html">Everyday Smoothie</a>
     </ul>
   </body>
 </html>
