Include CSS with styles.css file
Style aspects of the index page, as well as each recipe page,
with basic CSS.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./styles.css">
     <title>Odin Reciples</title>
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="mainpage">Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/bassomatic.html">Terrific Bass</a>
-      <li><a href="./recipes/oatmeal.html">Breakfast Oatmeal</a>
-      <li><a href="./recipes/smoothie.html">Everyday Smoothie</a>
+      <li class="recipelink"><a href="./recipes/bassomatic.html">Terrific Bass</a></li>
+      <li class="recipelink"><a href="./recipes/oatmeal.html">Breakfast Oatmeal</a></li>
+      <li class="recipelink"><a href="./recipes/smoothie.html">Everyday Smoothie</a></li>
     </ul>
   </body>
 </html>
