--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Everyday Smoothie</title>
   </head>
 
   <body>
     <h1>Everyday Smoothie</h1>
-      <img src="../img/smoothie.jpg" alt = "The Everyday Smoothie">
+      <img id="smoothie" src="../img/smoothie.jpg" alt = "The Everyday Smoothie">
     <h2>Description</h2>
       <p>This is a jack-of-all-trades smoothie. It can be eaten as a meal--breakfast, lunch, or dinner. It can be eaten for post-workout nutrition and replenishment. It can even be eaten as a snack, if made in smaller quantities. Use it to best suit your needs. I eat it most often as a post-workout 'meal' or as a late breakfast/brunch on the weekends</p>
     <h2>Ingredients</h2>
