Add more CSS to index.html and recipe pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1 class="mainpage">Odin Recipes</h1>
-    <ul>
+    <ul class="list">
       <li class="recipelink"><a href="./recipes/bassomatic.html">Terrific Bass</a></li>
       <li class="recipelink"><a href="./recipes/oatmeal.html">Breakfast Oatmeal</a></li>
       <li class="recipelink"><a href="./recipes/smoothie.html">Everyday Smoothie</a></li>
