--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Everyday Smoothie</h1>
       <img id="smoothie" src="../img/smoothie.jpg" alt = "The Everyday Smoothie">
-    <h2>Description</h2>
+    <h2 class="description">Description</h2>
       <p>This is a jack-of-all-trades smoothie. It can be eaten as a meal--breakfast, lunch, or dinner. It can be eaten for post-workout nutrition and replenishment. It can even be eaten as a snack, if made in smaller quantities. Use it to best suit your needs. I eat it most often as a post-workout 'meal' or as a late breakfast/brunch on the weekends</p>
     <h2>Ingredients</h2>
       <ul>
@@ -21,7 +21,7 @@
         <li>1/2 cup frozen strawberries</li>
         <li>Ice, to preference</li>
       </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
       <ol>
         <li>The first thing you need is a blender. I love a Vitamix, and they produce awesome smoothies. They're also quite expensive and not strictly necessary. Any working blender will do. Though you'll get better results with a Vitamix.</li>
         <li>Place the ingredients into the blender in the following order:
