--- a/recipes/bassomatic.html
+++ b/recipes/bassomatic.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Terrific Bass</h1>
       <img id="bass" src="https://i.ytimg.com/vi/qDLd3n5VDlw/maxresdefault.jpg" alt="Terrific Bass">
-    <h2>Description</h2>
+    <h2 class="description">Description</h2>
       <p>First introduced on Saturday Night Live in 1976, 'Terrific Bass' is a delicious and smooth drink made from a <em>whole</em> bass.</p>
       <p>If you love fish, smoothies, or both, you're sure to love this American classic.</p>
     <h2>Ingredients</h2>
@@ -17,7 +17,7 @@
         <li>2 cups water</li>
         <li>1 whole bass</li>
       </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
       <ol>
         <li>Place all of the water into the Super Bass-O-Matic '76.</li>
         <li>Place the bass--yes, the whole bass--into the Super Bass-O-Matic '76.</li>
