--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Breakfast Oatmeal</h1>
       <img id="oatmeal" src="../img/oatmeal.jpg" alt = "A Bowl of Oatmeal">
-    <h2>Description</h2>
+    <h2 class="description">Description</h2>
       <p>I eat this bowl of oatmeal (or slight variations) for breakfast <strong>every single weekday</strong>. It's filling, tasty, and very warming for those chilly New England mornings.</p>
       <p>It's my weekday morning go-to because it's quick, easy to make, and quite healthy. Feel free to test out the exact recipe below, or get creative and make your own variation. <em>Please note:</em>Specific quantities are deliberately omitted from this recipe because preferences for liquid quantity, fruit quantity, and nut quantity vary greatly. You know yourself best, so if you tend to like more of something, add more of that thing.</p>
     <h2>Ingredients</h2>
@@ -20,7 +20,7 @@
         <li>Nut of choice (I often use walnuts)</li>
         <li>Warm spice of choice (cinnamon is my go-to, but cardamom is also yummuy)</li>
       </ul>
-    <h2>Steps</h2>
+    <h2 class="steps">Steps</h2>
       <ol>
         <li>Grab a relatively large bowl (like for a bowl of soup, rather than a cup of soup)</li>
         <li>Place your desired quantity of your fruit(s) and nut(s) of choice into the bowl. It is crucial that they go in first.</li>
