--- a/recipes/bassomatic.html
+++ b/recipes/bassomatic.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Terrific Bass</h1>
-      <img id="bass" src="https://i.ytimg.com/vi/qDLd3n5VDlw/maxresdefault.jpg" alt="Terrific Bass">
+      <img id="bass" src="../img/bass.jpg" alt="Terrific Bass">
     <h2 class="description">Description</h2>
       <p>First introduced on Saturday Night Live in 1976, 'Terrific Bass' is a delicious and smooth drink made from a <em>whole</em> bass.</p>
       <p>If you love fish, smoothies, or both, you're sure to love this American classic.</p>
